# rust-shorts

./: README.md
.github/workflows/: http-server.yml  make-me-impl-rust.yml  makeMeImpl.yml  rust.yml
.github/workflows/applytwice/: rust.yml
apply-twice/: Cargo.toml  README.md
apply-twice/src/: main.rs
closures/: closure_01  closure_01.rs  closure_02  closure_02.rs  closure_03  closure_03.rs
collection/src/: main.rs
data-analysis-app/: Cargo.toml  README.md
data-analysis-app/src/: main.rs
exercises/: Cargo.toml  README.md
exercises/src/: main.rs
exercises/tests/: checker_tests.rs
http-server/: Cargo.toml  README.md  template.yml
http-server/.github/workflows/: deploy.yml
http-server/public/: hello.html
http-server/src/: banner.rs  lib.rs  main.rs
http-server/src/informations/: mod.rs
http-server/src/simple_functions/: mod.rs
make-me-impl/: Cargo.toml  README.md
make-me-impl/src/: main.rs
my-slack/: .gitignore  Cargo.toml  README.md
my-slack/src/: get_slack_channels_ids.rs  get_slack_user_ids.rs  main.rs  send_to_user.rs
my-slack/src/menu/: mod.rs
my-slack/src/slack_talk/: mod.rs
operator-overloading/: Cargo.toml  README.md
operator-overloading/src/: main.rs
return-an-option/: Cargo.toml
return-an-option/src/: main.rs
reverse-proxy/: Cargo.toml
reverse-proxy/src/: main.rs  test.rs
struct_one/: Cargo.toml  README.md
struct_one/src/: main.rs
text-editor/: Cargo.toml
text-editor/src/: main.rs
trait_me_softly/: Cargo.toml
trait_me_softly/src/: main.rs
tui1/: Cargo.toml  README.md
tui1/src/: main.rs
(+1 files in other folders)
