[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
names = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
termion = "4.0.2"
ulid = "1.1.3"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
