[package]
name = "my-slack"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
actix-web = "4.0"
dialoguer = "0.11.0"
colored = "2.1.0"
